--- a/Assignments/Midterm/Midterm.Rmd
+++ b/Assignments/Midterm/Midterm.Rmd
@@ -5,8 +5,7 @@ output:
     theme: readable
 ---
 
-<style type="text/css">
-.main-container {max-width: 75%; margin-left: auto; margin-right: auto;}</style>
+<style type="text/css"> .main-container {max-width: 75%; margin-left: auto; margin-right: auto;} </style>
 
 <!-- Links to the database webpages: -->
 <!-- https://data.cms.gov/provider-data/sites/default/files/data_dictionaries/hospital/HOSPITAL_Data_Dictionary.pdf -->
